Some CSS hacks in attempt to fix font size on mobile

--- a/scss/GenericTech.scss
+++ b/scss/GenericTech.scss
@@ -2,16 +2,16 @@ $almostBlack: #222;
 
 body {
     font-family: "Helvetica Neue",Helvetica,Roboto,Arial,sans-serif;
+    font-size: 1.0em;
     text-rendering: optimizelegibility;
 }
 
-h2 { border-bottom: 1px solid gray; }
+h2 { border-bottom: 0.1em solid gray; }
 
 @mixin cloudlist {
     li {
         display: inline-block;
         margin-right:0.5em;
-        font-size: 1.0em;
     }
 }
 
@@ -37,7 +37,7 @@ ul.plaincloud {
 
 div#certlogos {
     img {
-        max-height: 3.0em;
+        max-height: 5.0em;
         margin: 0 1.0em;
     }
 }
@@ -56,6 +56,4 @@ ul.duties::before {
     content: "Duties: ";
 }
 
-table {
-    font-size: 1.0em;
-}
+
